--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1, p {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('images/VFX_Styleguide_final_public_hidpjqwx7lqyx0pjj3ss_Page5.png'); /* Replace with the actual URL of the background image */
+    background-image: url('images/VFX_Styleguide_final_public_hidpjqwx7lqyx0pjj3ss_Page5.png');
     background-size: cover;
     filter: blur(10px);
     z-index: -1;
@@ -54,28 +54,46 @@ input[type="text"] {
     border: 2px solid black;
     border-radius: 7px;
     padding: 5px;
-    transition: all 0.3s ease-in-out;
+    transition: all .3s ease-in-out;
     cursor: pointer;
+    width: 100%;
+    max-width: 300px;
+    user-select: none;
 }
 
 input[type="text"]:hover {
     background-color: #f0f0f0;
-    border: 2px solid rgb(30, 212, 100)
+    border: 2px solid #1ed464;
 }
 
 input[type="text"]:focus {
-    outline: none;
+    outline: 0;
 }
 
 button {
     background-color: #007bff;
     color: white;
-    border: none;
+    border: 0;
     padding: 5px 10px;
     cursor: pointer;
     border-radius: 5px;
+    transition: background-color .3s ease-in-out;
+    margin-top: 10px;
 }
 
 button:hover {
     background-color: #0056b3;
+}
+
+.notification {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: none;
+    z-index: 3;
 }
