--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body, html {
 
 
 
+
 h1, p {
     margin: 10px;
     z-index: 2;
@@ -23,15 +24,17 @@ h1, p {
     position: absolute;
     width: 100%;
     height: 100%;
-    filter: blur(10px);
+    background-image: url('images/1d358e19a9d9368de0f231a4383c07f17d768500-1920x1080.jpg');
+    background-size: cover;
+    filter: blur(5px);
     z-index: -1;
 }
-
 .content {
     z-index: 1;
     text-align: center;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
+    
     border-radius: 10px;
     border: white solid 1px;
 }
@@ -51,7 +54,7 @@ h1, p {
 
 input[type="text"] {
     background-color: white;
-    border: 2px solid black;
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 7px;
     padding: 5px;
     transition: all .3s ease-in-out;
@@ -141,7 +144,6 @@ body{
     align-items: center;
     justify-content: center;
     background-color: var(--bgColorMenu);
-    
 }
 
 .menu__item{
