--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,19 @@ h1, p {
     text-align: center;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
-    
     border-radius: 10px;
     border: white solid 1px;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    display: none;
 }
+
+
+.content.show {
+    opacity: 1;
+    display: block;
+}
+
 
 .account-info {
     margin-top: 20px;
