--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,8 @@ button {
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
+    background-color: rgba(255, 255, 255, 0.7);
+    color: rgb(0, 0, 0);
     padding: 10px 20px;
     border-radius: 5px;
     display: none;
