--- a/styles.css
+++ b/styles.css
@@ -304,3 +304,10 @@ body {
                   1px  1px 0 #fff,    
                   1px  1px 0 #fff;
 }
+
+.no-select {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE/Edge */
+    user-select: none; /* Standard syntax */
+}
