--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,6 @@ body {
     }
 }
 
-
 .button-check-container {
     display: flex; /* Sử dụng flexbox để các button cùng hàng */
     justify-content: center; /* Căn giữa theo chiều ngang */
@@ -282,16 +281,28 @@ body {
 .button-check {
     padding: 10px 20px;
     margin: 0 5px; /* Khoảng cách giữa các button */
-    background-color: #007bff;
-    color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-.button-check:hover {
-    background-color: #0056b3;
+.button-check.red {
+    background-color: #dc3545; /* Màu đỏ */
+    color: white;
+}
+
+.button-check.red:hover {
+    background-color: #c82333; /* Màu đỏ khi hover */
+}
+
+.button-check.green {
+    background-color: #28a745; /* Màu xanh lá cây */
+    color: white;
+}
+
+.button-check.green:hover {
+    background-color: #218838; /* Màu xanh lá cây khi hover */
 }
 
 .banner{
