--- a/styles.css
+++ b/styles.css
@@ -326,3 +326,36 @@ body {
 .input-error{
     outline: 1px solid red;
   }
+
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.confirmation-box {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.confirmation-box button {
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#confirmBtn {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
